--- a/sms_login/android/app/build.gradle
+++ b/sms_login/android/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation platform('com.google.firebase:firebase-bom:29.0.1')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.browser:browser:1.3.0'
+
+
 }
