--- a/sms_login/pubspec.yaml
+++ b/sms_login/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   firebase_core: ^1.10.5
   firebase_analytics: ^9.0.3
   firebase_auth: ^3.3.3
+  flutter_countdown_timer: ^4.1.0
+  flutter_mobx: ^2.0.3+2
+  mobx: ^2.0.6+1
+  
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +52,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  mobx_codegen: ^2.0.5+2
+  build_runner: ^2.1.7
 
 
 # For information on the generic Dart part of this file, see the
